--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -828,6 +828,7 @@
   "wallet.send.form.next": "続ける",
   "wallet.send.form.receiver.hint": "ウォレットアドレス",
   "wallet.send.form.receiver.label": "送金先",
+  "wallet.send.form.receiver.placeholder": "アドレスを貼り付けるか、他のウォレットを選択してください",
   "wallet.send.form.reset": "リセット",
   "wallet.send.form.send": "送信",
   "wallet.send.form.syncingTransactionsMessage": "ウォレットの残高とトランザクション履歴は現在ブロックチェーンと同期中です。",
