--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -826,6 +826,7 @@
   "wallet.send.form.errors.invalidTitle": "Please enter a title with at least 3 characters.",
   "wallet.send.form.estimatedFee.label": "Estimated fees",
   "wallet.send.form.next": "Next",
+  "wallet.send.form.of.label": "of",
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
   "wallet.send.form.receiver.placeholder": "Paste address or select your other wallet",
