--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -825,6 +825,7 @@
   "wallet.send.form.errors.invalidAmount": "Please enter a valid amount.",
   "wallet.send.form.errors.invalidTitle": "Please enter a title with at least 3 characters.",
   "wallet.send.form.estimatedFee.label": "Estimated fees",
+  "wallet.send.form.maxButton": "Max",
   "wallet.send.form.next": "Next",
   "wallet.send.form.of.label": "of",
   "wallet.send.form.receiver.hint": "Wallet Address",
