--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -825,6 +825,7 @@
   "wallet.send.form.errors.invalidAmount": "有効な金額を入力してください。",
   "wallet.send.form.errors.invalidTitle": "タイトルを3字以上で入力してください。",
   "wallet.send.form.estimatedFee.label": "推定料金",
+  "wallet.send.form.maxButton": "マックス",
   "wallet.send.form.next": "続ける",
   "wallet.send.form.of.label": "/",
   "wallet.send.form.receiver.hint": "ウォレットアドレス",
