DDW-500 Implement design for native tokens - Wallet transactions with tokens

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -948,20 +948,22 @@
   "wallet.transaction.filter.resultInfo": "<b>{filtered}</b> out of <b>{total}</b> transactions match your filter.",
   "wallet.transaction.filter.selectTimeRange": "Select time range",
   "wallet.transaction.filter.thisYear": "This year",
+  "wallet.transaction.multipleTokens": "Multiple tokens",
+  "wallet.transaction.multipleTokensType": "Multiple-token",
   "wallet.transaction.noInputAddressesLabel": "No addresses",
   "wallet.transaction.pending.cancelPendingTxnNote": "This transaction has been pending for a long time. To release the funds used by this transaction, you can try canceling it.",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "Why should I cancel this transaction?",
   "wallet.transaction.pending.cancelTransactionButton": "Cancel pending transaction",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/en-us/articles/360038113814",
-  "wallet.transaction.received": "{currency} received",
+  "wallet.transaction.received": "{transactionsType} received",
   "wallet.transaction.rewards.from": "From rewards",
-  "wallet.transaction.sent": "{currency} sent",
+  "wallet.transaction.sent": "{transactionsType} sent",
   "wallet.transaction.state.confirmed": "Transaction confirmed",
   "wallet.transaction.state.failed": "Transaction failed",
   "wallet.transaction.state.pending": "Transaction pending",
   "wallet.transaction.transactionAmount": "Transaction amount",
   "wallet.transaction.transactionId": "Transaction ID",
-  "wallet.transaction.type": "{currency} transaction",
+  "wallet.transaction.type": "{typeOfTransaction} transaction",
   "wallet.transaction.type.card": "Card Payment",
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.unresolvedInputAddressesAdditionalLabel": "to see these addresses.",
