--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -948,20 +948,22 @@
   "wallet.transaction.filter.resultInfo": "フィルター条件と一致するのは<b>{total}</b>トランザクション中<b>{filtered}</b>件です。",
   "wallet.transaction.filter.selectTimeRange": "期間を選択してください",
   "wallet.transaction.filter.thisYear": "今年",
+  "wallet.transaction.multipleTokens": "複数のトークン",
+  "wallet.transaction.multipleTokensType": "マルチトークン",
   "wallet.transaction.noInputAddressesLabel": "アドレスなし",
   "wallet.transaction.pending.cancelPendingTxnNote": "このトランザクションは長時間処理中となっています。このトランザクションに使用されている資金を解放するために、トランザクションのキャンセルを試みることができます。",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "このトランザクションをキャンセルする理由",
   "wallet.transaction.pending.cancelTransactionButton": "処理中のトランザクションをキャンセルする",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/ja/articles/360038113814",
-  "wallet.transaction.received": "{currency}入金",
+  "wallet.transaction.received": "{transactionsType}入金",
   "wallet.transaction.rewards.from": "送信元報酬",
-  "wallet.transaction.sent": "{currency}送金",
+  "wallet.transaction.sent": "{transactionsType}送金",
   "wallet.transaction.state.confirmed": "トランザクション承認済み",
   "wallet.transaction.state.failed": "トランザクション失敗",
   "wallet.transaction.state.pending": "トランザクション処理中",
   "wallet.transaction.transactionAmount": "トランザクション額",
   "wallet.transaction.transactionId": "トランザクションID",
-  "wallet.transaction.type": "{currency}トランザクション",
+  "wallet.transaction.type": "{typeOfTransaction}トランザクション",
   "wallet.transaction.type.card": "カード支払い",
   "wallet.transaction.type.exchange": "換金",
   "wallet.transaction.unresolvedInputAddressesAdditionalLabel": "アドレスを表示する。",
