DDW-500 Implement design for native tokens - Wallet token transactions history updates

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -948,8 +948,7 @@
   "wallet.transaction.filter.resultInfo": "<b>{filtered}</b> out of <b>{total}</b> transactions match your filter.",
   "wallet.transaction.filter.selectTimeRange": "Select time range",
   "wallet.transaction.filter.thisYear": "This year",
-  "wallet.transaction.multipleTokens": "Multiple tokens",
-  "wallet.transaction.multipleTokensType": "Multiple-token",
+  "wallet.transaction.multipleTokens": "Multiple assets",
   "wallet.transaction.noInputAddressesLabel": "No addresses",
   "wallet.transaction.pending.cancelPendingTxnNote": "This transaction has been pending for a long time. To release the funds used by this transaction, you can try canceling it.",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "Why should I cancel this transaction?",
@@ -959,8 +958,11 @@
   "wallet.transaction.rewards.from": "From rewards",
   "wallet.transaction.sent": "{transactionsType} sent",
   "wallet.transaction.state.confirmed": "Transaction confirmed",
+  "wallet.transaction.state.confirmedHeading": "Confirmed",
   "wallet.transaction.state.failed": "Transaction failed",
+  "wallet.transaction.state.failedHeading": "Failed",
   "wallet.transaction.state.pending": "Transaction pending",
+  "wallet.transaction.state.pendingHeading": "Pending",
   "wallet.transaction.transactionAmount": "Transaction amount",
   "wallet.transaction.transactionId": "Transaction ID",
   "wallet.transaction.transactionMetadata": "Transaction Metadata",
