--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -948,8 +948,7 @@
   "wallet.transaction.filter.resultInfo": "フィルター条件と一致するのは<b>{total}</b>トランザクション中<b>{filtered}</b>件です。",
   "wallet.transaction.filter.selectTimeRange": "期間を選択してください",
   "wallet.transaction.filter.thisYear": "今年",
-  "wallet.transaction.multipleTokens": "複数のトークン",
-  "wallet.transaction.multipleTokensType": "マルチトークン",
+  "wallet.transaction.multipleTokens": "複数のアセット",
   "wallet.transaction.noInputAddressesLabel": "アドレスなし",
   "wallet.transaction.pending.cancelPendingTxnNote": "このトランザクションは長時間処理中となっています。このトランザクションに使用されている資金を解放するために、トランザクションのキャンセルを試みることができます。",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "このトランザクションをキャンセルする理由",
