DDW-500 Implement design for native tokens - Wallet token transactions history updates

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -958,8 +958,11 @@
   "wallet.transaction.rewards.from": "送信元報酬",
   "wallet.transaction.sent": "{transactionsType}送金",
   "wallet.transaction.state.confirmed": "トランザクション承認済み",
+  "wallet.transaction.state.confirmedHeading": "確認済み",
   "wallet.transaction.state.failed": "トランザクション失敗",
+  "wallet.transaction.state.failedHeading": "失敗しました",
   "wallet.transaction.state.pending": "トランザクション処理中",
+  "wallet.transaction.state.pendingHeading": "保留中",
   "wallet.transaction.transactionAmount": "トランザクション額",
   "wallet.transaction.transactionId": "トランザクションID",
   "wallet.transaction.transactionMetadata": "トランザクション Metadata",
