--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -955,6 +955,7 @@
   "wallet.transaction.pending.cancelTransactionButton": "Cancel pending transaction",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/en-us/articles/360038113814",
   "wallet.transaction.received": "{transactionsType} received",
+  "wallet.transaction.receiverLabel": "Receiver",
   "wallet.transaction.rewards.from": "From rewards",
   "wallet.transaction.sent": "{transactionsType} sent",
   "wallet.transaction.state.confirmed": "Transaction confirmed",
