--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -955,6 +955,7 @@
   "wallet.transaction.pending.cancelTransactionButton": "処理中のトランザクションをキャンセルする",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/ja/articles/360038113814",
   "wallet.transaction.received": "{transactionsType}入金",
+  "wallet.transaction.receiverLabel": "レシーバー",
   "wallet.transaction.rewards.from": "送信元報酬",
   "wallet.transaction.sent": "{transactionsType}送金",
   "wallet.transaction.state.confirmed": "トランザクション承認済み",
